website/versioned_docs/version-3.10/quickstart/login-portal-admin.md
---
id: version-3.10-login-portal-admin
title: Admin Portal
description: Admin Portal
sidebar_label: Overview
original_id: login-portal-admin
---

<div class="label-sect">
  <div class="ee-only tooltip">Enterprise
    <span class="tooltiptext">Applicable to Enterprise Edition</span>
  </div>
  <div class="ce-only tooltip">Community
    <span class="tooltiptext">Applicable to Community Edition</span>
  </div>
</div>

## Switch to Admin Portal

When login as an administrator, initially, you are landed on **User Portal**, click the Profile icon at top-right and select **Admin Portal** for the switch.

![](assets/v3-admin-entry.png)

## Admin Portal

![](assets/v310-landing-admin.png)

### Profile Menu

Hovering over top-right icon, there is a Profile Menu containing **User Profile**, **Change Password** and **Logout** shortcuts.

## Administration Features

+ `Groups` where Admin can manage groups. See [Group Management](../guide_manual/admin-group).

+ `Users` where Admin can manage users. See [User Management](../guide_manual/admin-user).

+ `Instance Types` where Admin can manage instance types. See [Instance Type Management](../guide_manual/admin-instancetype).

+ `Images` where Admin can manage images. See [Image Management](../guide_manul/../guide_manual/admin-image).

+ `Volumes` where Admin can manage volumes. See [Volume Management](../guide_manual/admin-volume).

+ `Secrets` where Admin can manage secrets. See [Secret Management](../guide_manual/admin-secret).

+ `Notebooks Admin` where Admin can manage Notebooks of users.

+ `Usage Report` where Admin can review monthly reports of usage. See [Usage Report](../guide_manual/admin-report). <span class="ee-only">Enterprise</span>

+ `App Settings` where Admin can import customized apps. See [App Settings](../guide_manual/admin-app-settings).

+ `System Settings` where Admin can configure system-wise settings. See [System Settings](../guide_manual/admin-system).

+ `Grafana` where Admin can view dashboards on **Grafana**.
